[tool.poetry]
name = "mqttms"
version = "2.0.2"
description = "mqttms library to handle MQTT communications and MS protocol master (client) side"
authors = ["Ivan Cenov <i_cenov@botevgrad.com>"]
maintainers = ["Ivan Cenov <i_cenov@botevgrad.com>"]
readme = "README.md"
packages = [{include = "mqttms", from = "src"}]
include = [
    "pyproject.toml",
    "build.py",
    "README.md"
]

# Runtime dependencies
[tool.poetry.dependencies]
python = ">=3.12"
cython = ">=3.0"
setuptools = ">=68.0.0"
tomli = { version = "*", markers = "python_version < '3.11'" }
numpy = "*"
importlib = "*"
paho-mqtt = "*"
jsonschema = "*"
types-jsonschema = "*"
rfc3986 = "*"

# Development dependencies
[tool.poetry.group.dev.dependencies]
mypy = ">=1.5.1"  # Static type checker
pathlib = ">=1.0"
build = "^1.2.2.post1"

# Test dependencies
[tool.poetry.group.test.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=6.0.0"
pytest-mock = ">=3.0.0"

# Definitions, specific for this project.
[tool.build.config]
extensions_path = "src/mqttms/extensions"
include_dirs = ["src/include"]
libraries = []
build_log = true

[build-system]
requires = ["poetry-core", "setuptools", "Cython", "build"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
generate-setup-file = true
script = 'build.py'

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "src"
